--- a/Dodzi's Portfolio/index.html
+++ b/Dodzi's Portfolio/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>DODZi's Place</title>
   </head>
   <body>
     <div id="root"></div>
